# GeomLabCode

./: .gitignore  README.md  SymbolicMaps.kv  main.py  noxfile.py  playground.py  pyproject.toml  symbolicstacking.py
StackingOrderAlgorithms/: ReadMe(stackingAlgos).txt  Thumbs.db  testData.npy  testDataEndeMai.npy
_arch/StackingOrderAlgorithms/: StackingorderAlgorithms.py
assets/: Thumbs.db  test4.xcf
data/: testDataJuni.npy
playground/: main.py
src/geomlab/: __init__.py  covidloader.py  main.py  symbolicstacking.py
