[tool.poetry]
name = "geomlab2020"
version = "0.1.0"
description = ""
authors = ["Roland Siegbert <roland@siegbert.info>", "David Goedecke", "Philipp Mayer"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
