[tool.poetry]
name = "geomlab"
version = "0.1.0"
description = ""
authors = ["Roland Siegbert <roland@siegbert.info>", "David Goedecke", "Philipp Mayer"]

[tool.poetry.dependencies]
python = "^3.7"
kivy = "^1.11.1"
matplotlib = "^3.2.2"
pillow = "^7.2.0"
opencv-python = "4.2.0.34"
pandas = "^1.1.1"
black = "^20.8b1"

[tool.poetry.scripts]
geomlab = "geomlab.main:main"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
nox = "^2020.5.24"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
